--- a/libs/identity/project.json
+++ b/libs/identity/project.json
@@ -17,6 +17,14 @@
         "jestConfig": "libs/identity/jest.config.ts",
         "passWithNoTests": true
       }
+    },
+    "test-unit": {
+      "executor": "@nrwl/jest:jest",
+      "outputs": ["coverage/libs/identity"],
+      "options": {
+        "jestConfig": "libs/identity/jest.config.ts",
+        "passWithNoTests": true
+      }
     }
   },
   "tags": []
